Updated latvian translation

--- a/lv/browser/chrome/browser/browser.properties
+++ b/lv/browser/chrome/browser/browser.properties
@@ -135,7 +135,7 @@ addonErrorBlocklisted=#1 nevar uzinstalēt, jo tas rada lielu drošības un stab
 tabview.title=%S - Grupējiet savas cilnes
 tabview.moveToUnnamedGroup.label=#1 un vēl 1;#1 un vēl #2
 
-identity.mixed_display_loaded=Savienojums ar šo lapu nav pilnībā drošs, jo satur nešifrētus elementus (piemēram attēlus).
+identity.broken_loaded=Savienojums ar šo lapu nav pilnībā drošs, jo satur nešifrētus elementus (piemēram attēlus) vai arī šifrējums nav gana drošs.
 identity.mixed_active_loaded2=Šī lapa satur nešifrētu interaktīvu saturs (piemēram lapas skriptus). Citi cilvēki var aplūkot jūsu informāciju vai modificēt lapas uzvedību.
 
 
