--- a/lv/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/lv/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -32,8 +32,8 @@ developer-button.label = Izstrādātāju rīki
 # LOCALIZATION NOTE(developer-button.tooltiptext): %S is the keyboard shortcut
 developer-button.tooltiptext2 = Atvērt izstrādātāju rīkus (%S)
 
-loop-call-button2.label = Sākt sarunu
-loop-call-button2.tooltiptext = Sākt sarunu
+loop-call-button3.label = Hallo
+loop-call-button3.tooltiptext = Sākt sarunu
 
 social-share-button.label = Dalīties ar šo lapu
 social-share-button.tooltiptext = Dalīties ar šo lapu
@@ -115,5 +115,5 @@ panic-button.tooltiptext = Aizmirst daļu pārlūkošanas vēstures
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = Atvērt WebIDE
+devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Atvērt WebIDE (%S)
