--- a/lv/browser/chrome/browser/devtools/gclicommands.properties
+++ b/lv/browser/chrome/browser/devtools/gclicommands.properties
@@ -18,6 +18,8 @@
 # command name, which is why it should be as short as possible.
 screenshotDesc=Saglabā lapas attēlu
 
+notAvailableInE10S=Komanda '%1$S' nav pieejama vairāku procesoru režīmā (E10S)
+
 dbgBlackBoxInvertDesc=Pretējā atbilstība, visi skripti, kas nav norādīti vai neatbilst šablonam tiks liekti melnajā kastē.
 dbgUnBlackBoxInvertDesc=Pretējā atbilstība, visi skripti, kas nav norādīti vai neatbilst šablonam vairs netiks liekti melnajā kastē.
 profilerStopped=Apturēts…
