--- a/lv/browser/chrome/browser/devtools/toolbox.properties
+++ b/lv/browser/chrome/browser/devtools/toolbox.properties
@@ -50,3 +50,4 @@ options.darkTheme.label=Tumšā tēma
 options.lightTheme.label=Gaišā tēma
 
 options.label=Iestatījumi
+toolbox.noContentProcess.message=Nedarbojas neviens satura process.
