--- a/lv/browser/chrome/browser/devtools/webide.properties
+++ b/lv/browser/chrome/browser/devtools/webide.properties
@@ -7,8 +7,11 @@ title_app=Firefox WebIDE: %S
 
 runtimeButton_label=Izvēlieties izpildlaiku
 projectButton_label=Atvērt lietotni
-
+addons_adapters_label=Rīku adapteru papildinājumi
 mainProcess_label=Galvenais process
+devicepreferences_reset_default=Atjaunot uz sākotnējo
+
+error_appProjectsLoadFailed=Nevar ielādēt projektu sarakstu. Šādi var gadīties, ja esat izmantojuši šo profilu ar jaunāku Firefox versiju.
 
 local_runtime=Lpkālais izpildlaiks
 remote_runtime=Attālinātais izpildlaiks
