--- a/lv/browser/chrome/overrides/appstrings.properties
+++ b/lv/browser/chrome/overrides/appstrings.properties
@@ -29,7 +29,7 @@ externalProtocolChkMsg=Atcerēties manu izvēli visām šāda veida saitēm.
 externalProtocolLaunchBtn=Palaist programmu
 malwareBlocked=Lietotāji lapu %S ir atzīmējuši kā bīstamu kaitnieku lapu. Balstoties uz jūsu drošības iestatījumiem, šī lapa ir bloķēta.
 phishingBlocked=Lietotāji lapu %S ir atzīmējuši kā aizdomīgu krāpnieku lapu, kas radīta, lai izmānītu no tās apmeklētājiem svarīgu personisko vai finanšu informāciju.
-cspFrameAncestorBlocked=Šīs lapas satura drošības politika liedz to ievietot šeit šādā veidā.
 remoteXUL=Šī lapa izmanto neatbalstītu tehnoloģiju, kas pēc noklusējuma vairs nav pieejama Firefox komplektācijā.
 corruptedContentError=Lapu, ko mēģināt apskatīt nevar attēlot datu pārraides kļūdas dēļ.
 notCached=Šis dokuments vairs nav pieejams.
+cspBlocked=Šīs lapas drošības politika liedz to ielādēt korekti. 
