--- a/lv/webapprt/webapprt/overrides/appstrings.properties
+++ b/lv/webapprt/webapprt/overrides/appstrings.properties
@@ -13,7 +13,6 @@ proxyResolveFailure=Aplikācija ir nokonfigurēta starpniekservera izmantošanai
 proxyConnectFailure=Aplikācija ir nokonfigurēta starpniekservera izmantošanai, bet tas atsaka savienojumus.
 contentEncodingError=Aplikācija no servera saņēma atbildi, kas izmantoja nederīgu vai neatbalstītu saspiešanas veidu.
 unsafeContentType=Aplikācija nevar turpināt, jo tā ir piekļuvusi faila tipam, ko var nebūt droši atvērt. Lūdzu sazinieties ar aplikācijas autoriem un pastāstiet viņiem par šo problēmu.
-cspFrameAncestorBlocked=Šī aplikācija mēģināja piekļūt resursam, kura piekļuves drošības politika liedz tā ievietošanu šādā veidā.
 corruptedContentError=Aplikācijas ielāde nevar turpināties, jo datu pārraidē konstatēta kļūda.
 remoteXUL=Aplikācija mēģināja izmantot neatbalstītu tehnoloģiju, kas vairs nav pieejama.
 connectionFailure=Savienojoties ar %S, savienojums tika atteikts.
@@ -32,3 +31,4 @@ netInterrupt=Savienojums ar %S tika negaidīti pārtraukts. Daļa datu iespējam
 netTimeout=Mēģinot pieslēgties %S iestājās noilgums.
 resendButton.label=Sūtīt vēlreiz
 unknownProtocolFound=Viens no šiem %S nav reģistrēts protokols vai arī nav atļauts šajā kontekstā.
+cspBlocked=Šīs lapas drošības politika liedz to ielādēt korekti. 
