--- a/lv/browser/chrome/browser/devtools/timeline.properties
+++ b/lv/browser/chrome/browser/devtools/timeline.properties
@@ -14,7 +14,7 @@
 # This string is displayed in the title of the tab when the timeline is
 # displayed inside the developer tools window and in the Developer Tools Menu.
 timeline.label=Laika josla
-
+graphs.memory=MB
 # LOCALIZATION NOTE (timeline.panelLabel):
 # This is used as the label for the toolbox panel.
 timeline.panelLabel=Laika joslas panelis
@@ -39,3 +39,23 @@ timeline.label.styles=Stili
 timeline.label.reflow=Pārzīmēšana
 timeline.label.paint=Krāsa
 timeline.label.domevent=DOM Notikumi
+timeline.label.javascript=Javascript
+timeline.label.consoleTime=Konsole
+
+# LOCALIZATION NOTE (timeline.markerDetailFormat):
+# Some timeline markers come with details, like a size, a name, a js function.
+# %1$S is replaced with one of the above label (timeline.label.*) and %2$S
+# with the details. For examples: Paint (200x100), or console.time (FOO)
+timeline.markerDetailFormat=%1$S (%2$S)
+
+# LOCALIZATION NOTE (time.markerDetail.*):
+# Strings used in the waterfall sidebar.
+timeline.markerDetail.start=Sākums:
+timeline.markerDetail.end=Beigas:
+timeline.markerDetail.duration=Ilgums:
+timeline.markerDetail.consoleTimerName=Nosaukums:
+timeline.markerDetail.DOMEventType=Tips:
+timeline.markerDetail.DOMEventPhase=Fāze:
+timeline.markerDetail.DOMEventTargetPhase=Mērķis
+timeline.markerDetail.DOMEventCapturingPhase=Tveršana
+timeline.markerDetail.DOMEventBubblingPhase=Burbuļošana
