--- a/lv/browser/chrome/browser/search.properties
+++ b/lv/browser/chrome/browser/search.properties
@@ -12,4 +12,6 @@ cmd_clearHistory_accesskey=M
 cmd_showSuggestions=Rādīt ieteikumus
 cmd_showSuggestions_accesskey=S
 
+searchHeader=%S meklēšana
+searchPlaceholder=meklēšana
 cmd_addFoundEngine=Pievienot "%S"
