Unifing different translations of terms based on “crypt” as root of the words, using for all of them the same koncept and terms which do not rely on “code” (“koduar”, “kodim”) or “cipher” (“shifrim”, “shifruar”).

--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -301,10 +301,10 @@ identity.identified.verified_by_you=Keni shtuar përjashtim sigurie për këtë 
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=Lidhja te ky sajt është e sigurt.
-identity.broken_loaded=Lidhja te ky sajt nuk është plotësisht e sigurt, ngaqë përmban elementë të pashifruar ents (fjala vjen, figura) ose shifrimi nuk është aq i fuqishëm sa duhet.
+identity.broken_loaded=Lidhja te ky sajt nuk është plotësisht e sigurt, ngaqë përmban elementë të pafshehtëzuar (fjala vjen, figura) ose fshehtëzimi nuk është aq i fuqishëm sa duhet.
 
-identity.mixed_active_loaded2=Ky sajt përmban lëndë ndërvepruese që nuk është e shifruar (fjala vjen, programthe). Të tjerët mund të shohin të dhëna tuajat ose të modifikojnë sjelljen e sajtit.
-identity.unencrypted=Lidhja juaj te ky sajt nuk është e shifruar.
+identity.mixed_active_loaded2=Ky sajt përmban lëndë ndërvepruese që nuk është e fshehtëzuar (fjala vjen, programthe). Të tjerët mund të shohin të dhëna tuajat ose të modifikojnë sjelljen e sajtit.
+identity.unencrypted=Lidhja juaj te ky sajt nuk është e fshehtëzuar.
 
 identity.unknown.tooltip=Ky sajt nuk furnizon të dhëna identiteti.
 
