--- a/sq/browser/chrome/browser/preferences/preferences.properties
+++ b/sq/browser/chrome/browser/preferences/preferences.properties
@@ -42,7 +42,7 @@ fpTitleChooseApp=Përzgjidhni Zbatim Ndihmës
 #### Cookie Viewer
 hostColon=Strehë:
 domainColon=Përkatësi:
-forSecureOnly=Vetëm lidhje të shifruara
+forSecureOnly=Vetëm lidhje të fshehtëzuara
 forAnyConnection=Cilindo lloj lidhjeje
 expireAtEndOfSession=Në fund të sesionit
 can=Lejoje
