--- a/sq/browser/chrome/browser/syncGenericChange.properties
+++ b/sq/browser/chrome/browser/syncGenericChange.properties
@@ -18,7 +18,7 @@ change.recoverykey.label = Kyçi i Riparimit po ndryshohet dhe po ngarkohen të 
 change.recoverykey.error = Pati një gabim gjatë ndryshimit të Kyçit tuaj të Riparimit!
 change.recoverykey.success = Kyçi juaj i Riparimit u ndryshua me sukses!
 
-change.synckey.introText2 = Që të sigurohet privatësia juaj tërësore, krejt të dhënat tuaja shifrohen, përpara se të ngarkohen. Kyçi për çshifrimin e të dhënave tuaja nuk ngarkohet gjëkundi.
+change.synckey.introText2 = Që të sigurohet privatësia juaj tërësore, krejt të dhënat tuaja fshehtëzohen, përpara se të ngarkohen. Kyçi për çfshehtëzimin e të dhënave tuaja nuk ngarkohet gjëkundi.
 # LOCALIZATION NOTE (change.recoverykey.warningText) "Sync" should match &syncBrand.shortName.label; from syncBrand.dtd
 change.recoverykey.warningText = Shënim: Ndryshimi i kësaj do të fshijë krejt të dhënat e depozituara në shërbyesin e Sync-ut dhe do të bëjë të ngarkohen të dhënat e reja të siguruara përmes këtij Kyçi Riparimi. Pajisjet tuaja të tjera nuk do të njëkohësohen pa u dhënë për secilën prej tyre Kyçi i ri i Riparimit.
 
