--- a/sq/mobile/android/chrome/browser.properties
+++ b/sq/mobile/android/chrome/browser.properties
@@ -90,7 +90,7 @@ identity.identified.verifier=Verifikuar nga: %S
 identity.identified.verified_by_you=Keni shtuar një përjashtim sigurie për këtë sajt
 identity.identified.state_and_country=%S, %S
 identity.identified.title_with_country=%S (%S)
-identity.encrypted2=I shifruar
+identity.encrypted2=I fshehtëzuar
 
 # Geolocation UI
 geolocation.allow=Tregoje
