--- a/sq/security/manager/chrome/pipnss/security.properties
+++ b/sq/security/manager/chrome/pipnss/security.properties
@@ -6,4 +6,4 @@
 #Thu Oct 14 12:35:01 EEST 2004
 Continue=Vazhdo
 Title=Sinjalizim Sigurie
-PostToInsecureFromSecureMessage=Edhe pse kjo faqe është e shifruar, të dhënat që ju dhatë, pritet të dërgohen përmes një lidhje të pashifruar dhe do të mundej të lexoheshin kollaj nga një palë e tretë.##Jeni i sigurt se doni të vazhdohet me dërgimin e këtyre të dhënave?##
+PostToInsecureFromSecureMessage=Edhe pse kjo faqe është e fshehtëzuar, të dhënat që ju dhatë, pritet të dërgohen përmes një lidhjeje të pafshehtëzuar dhe do të mundej të lexoheshin kollaj nga një palë e tretë.##Jeni i sigurt se doni të vazhdohet me dërgimin e këtyre të dhënave?##
