--- a/sq/security/manager/chrome/pippki/pippki.properties
+++ b/sq/security/manager/chrome/pippki/pippki.properties
@@ -7,7 +7,7 @@
 editTrustWindowTitle=Përpunoni të besuarit e dëshmisë
 issuerNotTrusted=Ngaqë nuk besoni autoritetin e dëshmive që lëshoi këtë dëshmi, nuk e besoni mirëfilltësinë e kësaj dëshmie, veç në u tregoftë ndryshe këtu.
 devinfo_stat_ready=Gati
-escrowFinalMessage=Do të duhej të klikonit OK vetëm nëse besoni "%S"për mbrojtjen e kyçit tuaj privat të shifrimeve.
+escrowFinalMessage=Do të duhej të klikonit OK vetëm nëse besoni "%S"për mbrojtjen e kyçit tuaj privat të fshehtëzimeve.
 deleteEmailCertTitle=Fshini Dëshmi E-Mail-esh
 resetPreferences=Përdorni këtë buton për të rikthyer parapëlqime sigurie të %S-s në rregullimet origjinalë .
 importCACertsPrompt=Përzgjidhni për importim Kartelë që përmban dëshmi AD
@@ -88,7 +88,7 @@ deleteSslCertImpact3=Nëse fshini një përjashtim shërbyesi, riktheni kështu 
 deleteSslCertConfirm3=Jeni i sigurt që doni të fshihen këto përjashtime shërbyesi?
 deleteOrphanCertTitle=Fshini Dëshmitë
 deleteOrphanCertConfirm=Jeni i sigurt që doni të fshihen këto dëshmi?
-deleteEmailCertImpactDesc=Nëse fshini dëshminë e e-mail-it të dikujt, nuk do të jeni më në gjendje t’i dërgoni atij personi e-mail të shifruar.
+deleteEmailCertImpactDesc=Nëse fshini dëshminë e e-mail-it të dikujt, nuk do të jeni më në gjendje t’i dërgoni atij personi e-mail të fshehtëzuar.
 addExceptionValidShort=Dëshmi e Vlefshme
 addExceptionValidLong=Ky sajt furnizon identifikim të vlefshëm, të vërtetuar.  Nuk ka nevojë të shtohet përjashtim.
 addExceptionUnverifiedOrBadSignatureShort=Identitet i Panjohur
