--- a/sq/toolkit/chrome/cookie/cookieAcceptDialog.properties
+++ b/sq/toolkit/chrome/cookie/cookieAcceptDialog.properties
@@ -14,5 +14,5 @@ permissionToModifyCookie=Sajti %S dëshiron të ndryshojë një cookie ekzistues
 permissionToSetSecondCookie=Sajti %S dëshiron të vendosë një tjetër cookie.
 permissionToSetAnotherCookie=Sajti %S do të vendosë një tjetër cookie.  \nKeni tashmë %S cookie prej këtij sajti.
 hideDetails=Fshih Hollësitë
-forSecureOnly=Vetëm lidhje të shifruara
+forSecureOnly=Vetëm lidhje të fshehtëzuara
 showDetails=Shfaq Hollësitë
