--- a/sq/mobile/android/chrome/pippki.properties
+++ b/sq/mobile/android/chrome/pippki.properties
@@ -15,7 +15,7 @@ downloadCert.trustObjSign=Besoje për identifikim zhvilluesish software-i.
 caCertExists.title=Dëshmia Ekziston
 caCertExists.message=Dëshmia ekziston tashmë.
 pkcs12.getpassword.title=Dialog Dhënieje Fjalëkalimesh
-pkcs12.getpassword.message=Ju lutemi, jepni fjalëkalimin që qe përdorur për të shifruar këtë kopjeruajtje dëshmie.
+pkcs12.getpassword.message=Ju lutemi, jepni fjalëkalimin që qe përdorur për të fshehtëzuar këtë kopjeruajtje dëshmie.
 clientAuthAsk.title=Kërkesë Identifikimi Përdoruesi
 clientAuthAsk.message1=Ky sajt ka kërkuar që ju të identifikoni vetveten përmes një dëshmie:
 clientAuthAsk.message2=Zgjidhni një dëshmi për ta paraqitur si identifikim:
