--- a/sq/security/manager/chrome/pipnss/nsserrors.properties
+++ b/sq/security/manager/chrome/pipnss/nsserrors.properties
@@ -2,9 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-SSL_ERROR_EXPORT_ONLY_SERVER=Nuk arrihet të komunikohet në mënyrë të sigurt.  Ana tjetër nuk mbulon shifrim të shkallës së lartë.
-SSL_ERROR_US_ONLY_SERVER=Nuk arrihet të komunikohet në mënyrë të sigurt.  Ana tjetër kërkon shifrim të shkallës së lartë, i cili nuk mbulohet.
-SSL_ERROR_NO_CYPHER_OVERLAP=Nuk komunikon dot në mënyrë të sigurt me anën tjetër: nuk ka algoritëm(e) shifrimi të njëjtë.
+SSL_ERROR_EXPORT_ONLY_SERVER=Nuk arrihet të komunikohet në mënyrë të sigurt.  Ana tjetër nuk mbulon fshehtëzim të shkallës së lartë.
+SSL_ERROR_US_ONLY_SERVER=Nuk arrihet të komunikohet në mënyrë të sigurt.  Ana tjetër kërkon fshehtëzim të shkallës së lartë, i cili nuk mbulohet.
+SSL_ERROR_NO_CYPHER_OVERLAP=Nuk komunikon dot në mënyrë të sigurt me anën tjetër: nuk ka algoritëm(e) të njëjtë fshehtëzimesh.
 SSL_ERROR_NO_CERTIFICATE=Nuk arrin të gjejë dëshmi ose kyç të nevojshëm për mirëfilltësimin.
 SSL_ERROR_BAD_CERTIFICATE=Nuk arrihet të komunikohet në mënyrë të sigurt me anën tjetër: dëshmia e anës tjetër u hodh tej.
 SSL_ERROR_BAD_CLIENT=Shërbyesi hasi të dhëna klienti të dëmtuara.
@@ -69,9 +69,9 @@ SSL_ERROR_SIGN_HASHES_FAILURE=Nuk arrihet të nënshkruhen numerikisht të dhën
 SSL_ERROR_EXTRACT_PUBLIC_KEY_FAILURE=SSL-ja nuk qe në gjendje të përftonte kyç publik prej dëshmisë së anës tjetër.
 SSL_ERROR_SERVER_KEY_EXCHANGE_FAILURE=Dështim i papërcaktuar gjatë përpunimit të duarshtrëngimit Shkëmbim SSL Kyçesh Shërbyesi.
 SSL_ERROR_CLIENT_KEY_EXCHANGE_FAILURE=Dështim i papërcaktuar gjatë përpunimit të duarshtrëngimit Shkëmbim SSL Kyçesh Klienti.
-SSL_ERROR_ENCRYPTION_FAILURE=Nën suitën e përzgjedhur për shifrën, algoritmi i shifrimit të të dhënave të papërpunuara dështoi.
-SSL_ERROR_DECRYPTION_FAILURE=Nën suitën e përzgjedhur për shifrën, algoritmi i çshifrimit të të dhënave të papërpunuara dështoi.
-SSL_ERROR_SOCKET_WRITE_FAILURE=Dështoi përpjekja për shkrim të dhënash të shifruara te socket-i nën të.
+SSL_ERROR_ENCRYPTION_FAILURE=Nën suitën e përzgjedhur për shifrën, algoritmi për fshehtëzim të dhënash të papërpunuara dështoi.
+SSL_ERROR_DECRYPTION_FAILURE=Nën suitën e përzgjedhur për shifrën, algoritmi për çfshehtëzim të dhënash të papërpunuara dështoi.
+SSL_ERROR_SOCKET_WRITE_FAILURE=Dështoi përpjekja për shkrim të dhënash të fshehtëzuara te socket-i nën të.
 SSL_ERROR_MD5_DIGEST_FAILURE=Funksioni "digest" MD5 dështoi.
 SSL_ERROR_SHA_DIGEST_FAILURE=Funksioni "digest" SHA-1 dështoi.
 SSL_ERROR_MAC_COMPUTATION_FAILURE=Përllogaritja MAC dështoi.
@@ -90,7 +90,7 @@ SSL_ERROR_BAD_HANDSHAKE_HASH_VALUE=Mora prej anës tjetër vlera hash të pasakt
 SSL_ERROR_CERT_KEA_MISMATCH=Dëshmia e furnizuar s’mund të përdoret me algoritmin e përzgjedhur për shkëmbim kyçesh.
 SSL_ERROR_NO_TRUSTED_SSL_CLIENT_CA=Nuk ka autoritet dëshmish të besuar për mirëfilltësim SSL të klientit.
 SSL_ERROR_SESSION_NOT_FOUND=Nuk u gjet ID sesioni SSL e klientit te fshehtina e shërbyesit për sesionin.
-SSL_ERROR_DECRYPTION_FAILED_ALERT=Ana tjetër nuk qe në gjendje të çshifronte një regjistrim SSL që mori.
+SSL_ERROR_DECRYPTION_FAILED_ALERT=Ana tjetër nuk qe në gjendje të çfshehtëzonte një regjistrim SSL që mori.
 SSL_ERROR_RECORD_OVERFLOW_ALERT=Ana tjetër mori regjistrim SSL që qe më i gjatë se sa lejohet.
 SSL_ERROR_UNKNOWN_CA_ALERT=Ana tjetër nuk e njeh, as e beson AD-në që ka lëshuar dëshminë tuaj.
 SSL_ERROR_ACCESS_DENIED_ALERT=Ana tjetër mori dëshmi të vlefshme, por iu mohua hyrja.
@@ -151,13 +151,13 @@ SEC_INTERNAL_ONLY=**Modul VETËM i brendshëm**
 SEC_ERROR_INVALID_KEY=Kyçi nuk mbulon veprimin e kërkuar.
 SEC_ERROR_UNKNOWN_CRITICAL_EXTENSION=Dëshmia përmban zgjerim kritik të panjohur.
 SEC_ERROR_OLD_CRL=LShD-ja (Listë Shfuqizimesh Dëshmish) e re nuk është më e vonshme se ajo e tanishmja.
-SEC_ERROR_NO_EMAIL_CERT=E pashifruar ose e panënshkruar: ende nuk keni dëshmi email-i.
-SEC_ERROR_NO_RECIPIENT_CERTS_QUERY=E pashifruar: nuk keni dëshmi për secilin nga marrësit.
-SEC_ERROR_NOT_A_RECIPIENT=Nuk e çshifron dot: nuk jeni marrës, ose nuk u gjet dëshmi dhe kyç privat me përputhje.
-SEC_ERROR_PKCS7_KEYALG_MISMATCH=Nuk e çshifron dot: algoritmi i shifrimit të kyçit nuk përputhet me dëshminë tuaj.
+SEC_ERROR_NO_EMAIL_CERT=E pafshehtëzuar ose e panënshkruar: ende nuk keni dëshmi email-i.
+SEC_ERROR_NO_RECIPIENT_CERTS_QUERY=E pafshehtëzuar: nuk keni dëshmi për secilin nga marrësit.
+SEC_ERROR_NOT_A_RECIPIENT=Nuk e çfshehtëzon dot: nuk jeni marrës, ose nuk u gjet dëshmi dhe kyç privat me përputhje.
+SEC_ERROR_PKCS7_KEYALG_MISMATCH=Nuk e çfshehtëzon dot: algoritmi i fshehtëzimit të kyçit nuk përputhet me dëshminë tuaj.
 SEC_ERROR_PKCS7_BAD_SIGNATURE=Vërtetimi i nënshkrimit dështoi: ose nuk u gjet nënshkrues, ose u gjetën shumë nënshkrues, ose të dhëna të papërshtatshme ose të dëmtuara.
 SEC_ERROR_UNSUPPORTED_KEYALG=Algoritëm i pambuluar ose i panjohur.
-SEC_ERROR_DECRYPTION_DISALLOWED=Nuk e çshifron dot: shifruar përmes përdorimit të një algoritmi apo madhësie kyçi me leje të mohuara.
+SEC_ERROR_DECRYPTION_DISALLOWED=Nuk e çfshehtëzon dot: fshehtëzuar përmes përdorimit të një algoritmi apo madhësie kyçi me leje të mohuara.
 XP_SEC_FORTEZZA_BAD_CARD=Karta Fortezza nuk është vënë në punë si duhet.  Ju lutemi, hiqeni dhe kthejani lëshuesit.
 XP_SEC_FORTEZZA_NO_CARD=Nuk u Gjetën karta Fortezza
 XP_SEC_FORTEZZA_NONE_SELECTED=Nuk ka përzgjedhje karte Fortezza
@@ -191,7 +191,7 @@ SEC_ERROR_PKCS12_INVALID_MAC=Nuk arrin të importojë.  MAC i pavlefshëm.  Fjal
 SEC_ERROR_PKCS12_UNSUPPORTED_MAC_ALGORITHM=Nuk arrin të importojë.  Algoritëm MAC që nuk mbulohet.
 SEC_ERROR_PKCS12_UNSUPPORTED_TRANSPORT_MODE=Nuk arrin të importojë.  Mbulohen vetëm mënyrat integritet fjalëkalimi dhe privatësi.
 SEC_ERROR_PKCS12_CORRUPT_PFX_STRUCTURE=Nuk arrin të importojë.  Struktura e kartelës është e dëmtuar.
-SEC_ERROR_PKCS12_UNSUPPORTED_PBE_ALGORITHM=Nuk arrin të importojë.  Algoritëm i pambuluar shifrimi.
+SEC_ERROR_PKCS12_UNSUPPORTED_PBE_ALGORITHM=Nuk arrin të importojë.  Algoritëm i pambuluar fshehtëzimesh.
 SEC_ERROR_PKCS12_UNSUPPORTED_VERSION=Nuk arrin të importojë.  Version kartele i pambuluar.
 SEC_ERROR_PKCS12_PRIVACY_PASSWORD_INCORRECT=Nuk arrin të importojë.  Fjalëkalim privatësie i pasaktë.
 SEC_ERROR_PKCS12_CERT_COLLISION=Nuk arrin të importojë.  E njëjta nofkë ekziston tashmë në bazën e të dhënave.
