--- a/sq/security/manager/chrome/pipnss/pipnss.properties
+++ b/sq/security/manager/chrome/pipnss/pipnss.properties
@@ -17,7 +17,7 @@ RootCertModuleName=Modul "Roots" të Trupëzuara
 ManufacturerID=Mozilla.org
 #
 # 32  bytes long after conversion to UTF8
-LibraryDescription=Shërbime të Brendshme Kripto PSM
+LibraryDescription=Shërbime Kriptografike të Brendshme PSM
 #
 # 32 bytes long after conversion to UTF8
 TokenDescription=Shërbime Kripto të Thjeshta
@@ -90,7 +90,7 @@ CertDumpSPKI=Të dhëna Kyçi Publik Subjekti
 CertDumpSPKIAlg=Kyç Publik Algoritmi i Subjektit
 CertDumpAlgID=Identifikues Algoritmesh
 CertDumpParams=Parametra Algoritmi
-CertDumpRSAEncr=Shifrim PKCS #1 RSA 
+CertDumpRSAEncr=Fshehtëzim PKCS #1 RSA 
 CertDumpRSATemplate=Modulus (%S bite):\n%S\nEksponent (%S bite):\n%S
 CertDumpIssuerUniqueID=ID Unik Lëshuesi
 CertDumpSubjPubKey=Kyç Privat Subjekti
@@ -153,7 +153,7 @@ CertDumpMSCerttype=Microsoft Certificate Template Name
 CertDumpMSNTPrincipal=Microsoft Principal Name
 CertDumpMSCAVersion=Microsoft CA Version
 CertDumpMSDomainGUID=Microsoft Domain GUID
-CertDumpEKU_2_16_840_1_113730_4_1=Netscape Server Gated Crypto
+CertDumpEKU_2_16_840_1_113730_4_1=Fshehtëzim Përmes Shërbyesi Netscape
 CertDumpRFC822Name=Adresë E-Mail
 CertDumpDNSName=Emër DNS
 CertDumpX400Address=Adresë X.400
@@ -242,8 +242,8 @@ VerifySSLClient_p=Klient
 VerifySSLServer_p=Shërbyes
 VerifySSLStepUp_p=Step-up
 VerifySSLCA_p=AD SSL
-VerifyEmailSigner_p=Nënshkruaj
-VerifyEmailRecip_p=Shifro
+VerifyEmailSigner_p=Nënshkruaje
+VerifyEmailRecip_p=Fshetëzoje
 VerifyProtectObjSign_p=Nënshkrues Objekti të Mbrojtur
 VerifyObjSign_p=Nënshkrues Objekti
 VerifyUserImport_p=Importim Përdoruesi
