--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -301,9 +301,10 @@ identity.identified.verified_by_you=Keni shtuar përjashtim sigurie për këtë 
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=Lidhja te ky sajt është e sigurt.
-identity.mixed_display_loaded=Lidhja te ky sajt nuk është plotësisht e sigurt, ngaqë përmban elementë të pashifruar (fjala vjen, figura).
-identity.mixed_active_loaded2=Ky sajt përmban lëndë ndërvepruese që nuk është e shifruar (fjala vjen, programthe). Të tjerët mund të shohin të dhëna tuajat ose të modifikojnë sjelljen e sajtit.
-identity.unencrypted=Lidhja juaj te ky sajt nuk është e shifruar.
+identity.mixed_display_loaded=Lidhja te ky sajt nuk është plotësisht e sigurt, ngaqë përmban elementë të pafshehtëzuar (fjala vjen, figura).
+
+identity.mixed_active_loaded2=Ky sajt përmban lëndë ndërvepruese që nuk është e fshehtëzuar (fjala vjen, programthe). Të tjerët mund të shohin të dhëna tuajat ose të modifikojnë sjelljen e sajtit.
+identity.unencrypted=Lidhja juaj te ky sajt nuk është e fshehtëzuar.
 
 identity.unknown.tooltip=Ky sajt nuk furnizon të dhëna identiteti.
 
