--- a/hy-AM/mobile/android/chrome/browser.properties
+++ b/hy-AM/mobile/android/chrome/browser.properties
@@ -160,7 +160,7 @@ newprivatetabpopup.opened=Գաղտնի դիտարկման ներդիր է բաց
 
 # LOCALIZATION NOTE (newtabpopup.switch): Ideally, this string is short (it's a
 # button label) and upper-case, to match Google and Android's convention.
-newtabpopup.switch=ՓՈԽԵԼ
+newtabpopup.switch=ԱՆՑՆԵԼ
 
 # Undo close tab toast
 # LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
