[hu] update from Pootle (firefox)

--- a/hu/dom/chrome/dom/dom.properties
+++ b/hu/dom/chrome/dom/dom.properties
@@ -210,3 +210,4 @@ KeyNameDeadKeysWarning=A KeyboardEvent.key „Dead” kezdetű értékei elavult
 ImportXULIntoContentWarning=A XUL csomópontok tartalomdokumentumba importálása elavult. Ez a funkcionalitás hamarosan eltávolításra kerülhet.
 XMLDocumentLoadPrincipalMismatch=A document.load használata tilos olyan dokumentumokon, amelyek más ablakokból származnak. Csak az az ablak hívhatja a .load-ot a dokumentumon, amelyben létrejött. Inkább használja az XMLHttpRequest-et.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation=Egy még be nem fejeződött IndexedDB tranzakció meg lett szakítva az oldalnavigáció miatt.
