--- a/hu/dom/chrome/layout/css.properties
+++ b/hu/dom/chrome/layout/css.properties
@@ -106,6 +106,9 @@ PEColorSaturationEOF=telítettség
 PEColorLightnessEOF=világosság
 PEColorOpacityEOF=átlátszatlanság a színértékben
 PEExpectedNumber=A várt szám helyett „%1$S” található.
+PEPositionEOF=<position>
+PEExpectedPosition=A várt <position> helyett „%1$S” található.
+PEExpectedRadius=A várt radius helyett „%1$S” található.
 PEExpectedCloseParen=A várt „)” helyett „%1$S” található.
 PEDeclEndEOF=„;” vagy „}” a deklaráció végéhez
 PEParseDeclarationNoColon=A várt „:” helyett „%1$S” található.
