--- a/hu/security/manager/chrome/pipnss/nsserrors.properties
+++ b/hu/security/manager/chrome/pipnss/nsserrors.properties
@@ -314,3 +314,4 @@ SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=A tanúsítvány egy nem biztonságo
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=A kiszolgáló a kulcsrögzítést (HPKP) használja, de nem hozható létre a rögzítési készletnek megfelelő megbízható tanúsítványlánc. A kulcsrögzítés irányelvsértései nem bírálhatók felül.
 MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=A kiszolgáló által használt tanúsítvány alapvető megszorítások kiterjesztése hitelesítésszolgáltatóként azonosítja. A megfelelően kibocsátott tanúsítványok esetén ennek nem így kell lennie.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=A kiszolgáló által bemutatott tanúsítvány kulcsmérete túl kicsi biztonságos kapcsolat létrehozásához.
+MOZILLA_PKIX_ERROR_V1_CERT_USED_AS_CA=A kiszolgáló tanúsítványa egy 1-es verziójú, nem trust anchor X.509 tanúsítvány használatával lett kibocsátva. Az 1-es verziójú X.509 tanúsítványok elavultak, és ezeket nem szabad más tanúsítványok aláírására használni.
