--- a/hu/toolkit/chrome/global/aboutSupport.properties
+++ b/hu/toolkit/chrome/global/aboutSupport.properties
@@ -83,3 +83,6 @@ webglRenderer = WebGL-megjelenítő
 minLibVersions = Elvárt minimális verzió
 loadedLibVersions = Használt verzió
 
+hasSeccompBPF = Seccomp-BPF (rendszerhívás-szűrés)
+canSandboxContent = Tartalomfolyamat sandboxing
+canSandboxMedia = Médiabővítmény sandboxing
