--- a/hu/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/hu/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -161,6 +161,8 @@ addon.purchase.label=Vásárlás %S-ért…
 addon.purchase.tooltip=Látogasson el a kiegészítőgalériába, és vegye meg ezt a kiegészítőt
 #LOCALIZATION NOTE (cmd.purchaseAddon.label) displayed on a button in the detail
 # view, %S is the price of the add-on including currency symbol
+cmd.purchaseAddon.label=Vásárlás %S-ért…
+cmd.purchaseAddon.accesskey=V
 
 #LOCALIZATION NOTE (eulaHeader) %S is name of the add-on asking the user to agree to the EULA
 eulaHeader=A(z) %S megköveteli, hogy elfogadja a telepítés előtt a következő Végfelhasználói licencszerződést:
