--- a/hu/security/manager/chrome/pippki/pippki.properties
+++ b/hu/security/manager/chrome/pippki/pippki.properties
@@ -76,7 +76,9 @@ pageInfo_Privacy_None3=A megjelenített oldal nincsen titkosítva.
 # LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Kapcsolat titkosítva (%1$S, %2$S bites kulcsok, %3$S)
 pageInfo_Privacy_Encrypted1=Az éppen nézett oldalt titkosították, mielőtt átküldték az interneten.
+pageInfo_Privacy_Encrypted2=A titkosítás nehézzé teszi illetéktelen személyek számára az adatok lehallgatását, amíg azok a számítógépek között utaznak. Emiatt nem valószínű, hogy bárki is elolvasta ezt az oldalt, amíg az a hálózaton utazott.
 pageInfo_MixedContent=A kapcsolat részben titkosított
 
 #Cert Viewer
