--- a/hu/toolkit/chrome/global/aboutTelemetry.properties
+++ b/hu/toolkit/chrome/global/aboutTelemetry.properties
@@ -9,6 +9,7 @@ pageSubtitle = Ez az oldal megjeleníti a telemetria által gyűjtött teljesít
 
 generalDataHeadingName = Név
 
+generalDataHeadingValue = Érték
 
 slowSqlMain = Lassú SQL utasítások a főszálon
 
@@ -49,6 +50,7 @@ enableTelemetry = Telemetria bekapcsolása
 
 keysHeader = Tulajdonság
 
+valuesHeader = Érték
 
 addonTableID = Kiegészítő-azonosító
 
