[hu] update from Pootle (firefox)

--- a/hu/security/manager/chrome/pippki/pippki.properties
+++ b/hu/security/manager/chrome/pippki/pippki.properties
@@ -80,6 +80,7 @@ pageInfo_EncryptionWithBitsAndProtocol=Kapcsolat titkosítva (%1$S, %2$S bites k
 pageInfo_Privacy_Encrypted1=Az éppen nézett oldalt titkosították, mielőtt átküldték az interneten.
 pageInfo_Privacy_Encrypted2=A titkosítás nehézzé teszi illetéktelen személyek számára az adatok lehallgatását, amíg azok a számítógépek között utaznak. Emiatt nem valószínű, hogy bárki is elolvasta ezt az oldalt, amíg az a hálózaton utazott.
 pageInfo_MixedContent=A kapcsolat részben titkosított
+pageInfo_Privacy_Broken1=A megjelenített oldal részei nem lettek titkosítva, vagy a titkosítás nem volt elég erős az interneten való átvitel előtt.
 
 #Cert Viewer
 certDetails=Tanúsítványmegjelenítő:
@@ -146,12 +147,17 @@ writeFileUnknownError=Ismeretlen hiba
 addExceptionBrandedWarning2=Arra készül, hogy felülbírálja a webhely %S általi besorolását.
 addExceptionInvalidHeader=Ez a webhely érvénytelen adatokkal próbálja azonosítani magát.
 addExceptionDomainMismatchShort=Rossz webhely
+addExceptionDomainMismatchLong2=A tanúsítvány egy másik webhelyhez tartozik, azaz valaki megpróbálhatja ennek a webhelynek kiadni magát.
 addExceptionExpiredShort=Elavult információ
+addExceptionExpiredLong2=A tanúsítvány már nem érvényes. Lehet, hogy ellopták vagy elveszett, és valaki megpróbálhatja ennek a webhelynek kiadni magát.
 addExceptionUnverifiedOrBadSignatureShort=Ismeretlen identitás
+addExceptionUnverifiedOrBadSignatureLong2=A tanúsítvány nem megbízható, mert nem ellenőrizte kibocsátottként egy biztonságos aláírást használó elismert hatóság.
 addExceptionValidShort=Érvényes tanúsítvány
 addExceptionValidLong=A webhely érvényesen, ellenőrzötten azonosította magát. Nem kell kivételt hozzáadni.
 addExceptionCheckingShort=Adatok ellenőrzése
+addExceptionCheckingLong2=Kísérlet a webhely azonosítására…
 addExceptionNoCertShort=Nem áll rendelkezésre információ
+addExceptionNoCertLong2=Nem lehet a webhely azonosítási állapotát lekérdezni.
 addExceptionConnectionFailed=A kapcsolat sikertelen
 
 #Certificate Exists in database
