--- a/hu/suite/chrome/common/notification.properties
+++ b/hu/suite/chrome/common/notification.properties
@@ -3,6 +3,8 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 outdatedpluginsMessage.title=Az oldal által használt egyes bővítmények elavultak.
+outdatedpluginsMessage.button.label=Bővítmények frissítése…
+outdatedpluginsMessage.button.accesskey=f
 
 # LOCALIZATION NOTE (carbonfailurepluginsMessage.title):
 # The English form of this string used to use the word "requires" but it was
@@ -178,8 +180,10 @@ updatePromptCheckButton.accesskey=F
 SecurityTitle=Biztonsági figyelmeztetés
 MixedContentMessage=Egy titkosított oldalra fog érni, amely nem titkosított elemeket is tartalmaz. Azokat az információkat, amiket mostantól lát vagy küld, könnyen olvashatja egy harmadik személy.
 MixedActiveContentMessage=Egy titkosított oldalra fog érni, amely nem titkosított elemeket is tartalmaz. Azokat az információkat, amiket mostantól lát vagy küld, könnyen olvashatja egy harmadik személy.
+TrackingContentMessage=Az oldal felhasználói aktivitás követésére alkalmas elemeket tartalmazhat.
 MixedDisplayContentMessage=Egy titkosított oldalra fog érni, amely részben titkosított elemeket tartalmaz, így nem nem véd meg a lehallgatástól.
 BlockedActiveContentMessage=Az oldalon lévő nem biztonságos elemeket le lettek tiltva.
+BlockedTrackingContentMessage=Az oldalon lévő felhasználói aktivitás követésére alkalmas elemei le lettek tiltva.
 BlockedDisplayContentMessage=Az oldalon lévő nem titkosított elemeket le lettek tiltva.
 EnterInsecureMessage=Egy titkosított oldal elhagyására készül. Azokat az információkat, amiket mostantól küld, könnyen olvashatja egy harmadik személy.
 EnterSecureMessage=Egy titkosított oldalra fog érni. A weboldal azonosítása megtörtént, és az ezután megjelenő, illetve Ön által beírt információ nehezen hozzáférhető harmadik fél számára.
