--- a/hu/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/hu/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,7 +99,11 @@ quit-button.tooltiptext.mac = Kilépés a %1$Sból  (%2$S)
 
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = Társalgás kezdése
 
+social-share-button.label = Oldal megosztása
+social-share-button.tooltiptext = Oldal megosztása
 
 panic-button.label = Elfelejtés
 panic-button.tooltiptext = Böngészési előzmények elfelejtése
@@ -111,3 +115,4 @@ web-apps-button.tooltiptext = Appok keresése
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 # %S is the keyboard shortcut
 devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = WebIDE megnyitása (%S)
