[hu] update from Pootle (firefox)

--- a/hu/browser/chrome/browser/devtools/timeline.properties
+++ b/hu/browser/chrome/browser/devtools/timeline.properties
@@ -38,6 +38,7 @@ timeline.records=REKORDOK
 timeline.label.styles=Stílusok
 timeline.label.reflow=Újratördelés
 timeline.label.paint=Kifestés
+timeline.label.javascript=JavaScript
 timeline.label.domevent=DOM esemény
 timeline.label.consoleTime=Konzol
 
@@ -56,3 +57,11 @@ timeline.markerDetailFormat=%1$S (%2$S)
 # LOCALIZATION NOTE (time.markerDetail.*):
 # Strings used in the waterfall sidebar.
 timeline.markerDetail.start=Indítás:
+timeline.markerDetail.end=Vége:
+timeline.markerDetail.duration=Hossz:
+timeline.markerDetail.consoleTimerName=Időzítő neve:
+timeline.markerDetail.DOMEventType=Esemény típusa:
+timeline.markerDetail.DOMEventPhase=Fázis:
+timeline.markerDetail.DOMEventTargetPhase=Cél
+timeline.markerDetail.DOMEventCapturingPhase=Rögzítés
+timeline.markerDetail.DOMEventBubblingPhase=Buborékolás
