--- a/hu/browser/chrome/browser/browser.properties
+++ b/hu/browser/chrome/browser/browser.properties
@@ -295,6 +295,7 @@ identity.identified.verified_by_you=Biztonsági kivételt adott hozzá ehhez a w
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=A kapcsolat ehhez a webhelyhez biztonságos.
+identity.broken_loaded=A kapcsolat ehhez a webhelyhez nem teljesen biztonságos, mert titkosítatlan elemeket (például képeket) tartalmaz, vagy a titkosítás nem elég erős.
 identity.mixed_active_loaded2=Ez a weboldal nem titkosított interaktív tartalmat (például egy parancsfájlt) tartalmaz. Emiatt mások megjeleníthetik információit, vagy módosíthatják a weboldal viselkedését.
 identity.unencrypted=A kapcsolat ezzel a webhellyel nem titkosított.
 
