--- a/hu/browser/chrome/browser/devtools/toolbox.properties
+++ b/hu/browser/chrome/browser/devtools/toolbox.properties
@@ -82,3 +82,4 @@ options.lightTheme.label=Világos téma
 # LOCALIZATION NOTE (toolbox.noContentProcess.message)
 # Used as a message in the alert displayed when trying to open a browser
 # content toolbox and there is no content process running
+toolbox.noContentProcess.message=Nem fut tartalomfolyamat.
