--- a/hu/browser/chrome/browser/shellservice.properties
+++ b/hu/browser/chrome/browser/shellservice.properties
@@ -20,6 +20,9 @@ setDefaultBrowserNever.accesskey   = N
 # LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
 # These strings are used as an alternative to the ones above, in a modal dialog.
 # %S will be replaced by brandShortName
+setDefaultBrowserTitle=Alapértelmezett böngésző
+setDefaultBrowserMessage=A %S jelenleg nem az alapértelmezett böngésző. Szeretné alapértelmezetté tenni?
+setDefaultBrowserDontAsk=Ellenőrzés a %S minden indításakor.
 
 desktopBackgroundLeafNameWin=Asztalhatter.bmp
 DesktopBackgroundDownloading=Kép mentése…
