Bug 1103314 - Clarify label of "Remove All Cookies" button to indicate whether it removes all cookies or just removes the cookies shown

--- a/sk/browser/chrome/browser/preferences/preferences.properties
+++ b/sk/browser/chrome/browser/preferences/preferences.properties
@@ -92,6 +92,10 @@ cannot=Zakázať
 noCookieSelected=<nie je vybrané žiadne cookie>
 cookiesAll=V počítači sú uložené tieto cookies:
 cookiesFiltered=Tieto cookies vyhovujú vášmu hľadaniu:
+# LOCALIZATION NOTE (removeSelectedCookies):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+removeSelectedCookies=Odstrániť zvolené;Odstrániť zvolené;Odstrániť zvolené
 
 #### Offline apps
 offlineAppsList.height=7em
