Bug 1079336 - Updated runtime details to show 'unknown (requires ADB Helper 0.4.0 or later)' in WebIDE properties

--- a/pl/browser/chrome/browser/devtools/webide.properties
+++ b/pl/browser/chrome/browser/devtools/webide.properties
@@ -50,7 +50,7 @@ addons_status_installing=Instalowanie…
 
 runtimedetails_checkno=Nie
 runtimedetails_checkyes=Tak
-runtimedetails_checkunkown=Nieznany
+runtimedetails_checkunknown=Nieznany (wymaga dodatku ADB Helper 0.4.0 lub nowszego)
 runtimedetails_notUSBDevice=Inne urządzenie (nie USB)
 
 status_tooltip=Status weryfikacji: %1$S
