Bug 1115038 - Ctrl-Tab panel's "Show all X tabs" button should read "List All X Tabs" instead

--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -323,11 +323,7 @@ safebrowsing.reportedAttackSite=Zgłoszona witryna dokonująca ataków!
 safebrowsing.notAnAttackButton.label=To nie jest witryna dokonująca ataków…
 safebrowsing.notAnAttackButton.accessKey=T
 
-# Ctrl-Tab
-# LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
-# of tabs in the current browser window. It will always be 2 at least.
-# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-ctrlTab.showAll.label=;Wyświetl wszystkie #1 karty;Wyświetl wszystkie #1 kart
+ctrlTab.listAllTabs.label=;Wyświetl listę ze wszystkimi #1 kartami;Wyświetl wszystkie #1 kart na liście
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
