Bug 1103314 - Clarify label of "Remove All Cookies" button to indicate whether it removes all cookies or just removes the cookies shown

--- a/pl/browser/chrome/browser/preferences/preferences.properties
+++ b/pl/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cannot=Blokuj
 noCookieSelected=<nie zaznaczono ciasteczka>
 cookiesAll=Następujące ciasteczka są przechowywane na tym komputerze:
 cookiesFiltered=Następujące ciasteczka odpowiadają zapytaniu:
+removeSelectedCookies=Usuń zaznaczone;Usuń zaznaczone;Usuń zaznaczone
 
 offlineAppsList.height=7em
 offlineAppRemoveTitle=Usuń dane witryn trybu offline
