--- a/es-MX/security/manager/chrome/pippki/pippki.properties
+++ b/es-MX/security/manager/chrome/pippki/pippki.properties
@@ -76,8 +76,11 @@ pageInfo_Privacy_None3=La página que está viendo está sin cifrar.
 # LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Conección encriptada (%1$S, %2$S, llaves bit, %3$S)
 pageInfo_Privacy_Encrypted1=La página que está viendo fue cifrada antes de ser transmitida por Internet.
+pageInfo_Privacy_Encrypted2=El cifrado dificulta el acceso a la información transmitida entre equipos por parte de personas no autorizadas. Por lo tanto, es poco probable que alguien más haya leído esta página mientras viajaba por la red.
 pageInfo_MixedContent=Conexión parcialmente cifrada
+pageInfo_Privacy_Broken1=Hay partes de la página que ves que o no fueron encriptadas o el cifrado no tenía fuerza suficiente antes de transmitirse por internet.
 
 #Cert Viewer
 certDetails=Visor de certificados:
@@ -144,12 +147,17 @@ writeFileUnknownError=Error desconocido
 addExceptionBrandedWarning2=Está a punto de alterar cómo identifica %S este sitio.
 addExceptionInvalidHeader=Este sitio intenta identificarse a sí mismo con información no válida.
 addExceptionDomainMismatchShort=Sitio erróneo
+addExceptionDomainMismatchLong2=El certificado pertenece a un sitio distinto y lo cual significa que alguien intente suplantar este sitio.
 addExceptionExpiredShort=Información obsoleta
+addExceptionExpiredLong2=El certificado actual no es válido. Puede que se lo robara o se lo perdiera y alguien más lo esté usando para suplantar este sitio.
 addExceptionUnverifiedOrBadSignatureShort=Identidad desconocida
+addExceptionUnverifiedOrBadSignatureLong2=No se confía en el certificado porque no ha sido verificado por una autoridad reconocida usando una firma segura.
 addExceptionValidShort=Certificado válido
 addExceptionValidLong=Este sitio proporciona identificación válida y verificada. No hay necesidad de añadir una excepción.
 addExceptionCheckingShort=Comprobando información
+addExceptionCheckingLong2=Intentando identificar el sitio…
 addExceptionNoCertShort=No hay información disponible
+addExceptionNoCertLong2=No es posible obtener el estado de identificación para este sitio.
 addExceptionConnectionFailed=Conexión fallida
 
 #Certificate Exists in database
