[es-MX] update from Pootle (firefox)

--- a/es-MX/security/manager/chrome/pipnss/nsserrors.properties
+++ b/es-MX/security/manager/chrome/pipnss/nsserrors.properties
@@ -314,3 +314,4 @@ SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=El certificado se firmó usando un a
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Este servidor usa key pinning (HPKP) pero no se ha podido construir una cadena de certificados confiables que coincida con el pinset. Las violaciones de key pinning no se pueden solventar.
 MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=El servidor usa un certificado con una extensión básica de restricciones que lo identifica como autoridad de certificación. Esto no debería ser el caso para un certificado emitido correctamente.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=El servidor ha presentado un certificado con un tamaño de clave que es demasiado pequeño para establecer una conexión segura.
+MOZILLA_PKIX_ERROR_V1_CERT_USED_AS_CA=Un certificado X.509 versión 1 que no sea un anclar confiable se usó para emitir el certificado del servidor. Certificados X.509 versión 1 son obsoletos y no se deben usar para firmar otros certificados.  \u00A0
