[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/notification.properties
+++ b/pt-BR/suite/chrome/common/notification.properties
@@ -3,6 +3,8 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 outdatedpluginsMessage.title=Alguns dos plugins usados por esta página estão desatualizados.
+outdatedpluginsMessage.button.label=Atualizar plugins…
+outdatedpluginsMessage.button.accesskey=u
 
 # LOCALIZATION NOTE (carbonfailurepluginsMessage.title):
 # The English form of this string used to use the word "requires" but it was
@@ -14,6 +16,11 @@ missingpluginsMessage.title=Plugins adicionais são requeridos para exibir todo 
 
 blockedpluginsMessage.title=Alguns plugins requeridos por esta página foram bloqueados para sua proteção.
 
+crashedpluginsMessage.title=O plugin %S travou.
+crashedpluginsMessage.reloadButton.label=Recarregar página
+crashedpluginsMessage.reloadButton.accesskey=R
+crashedpluginsMessage.submitButton.label=Enviar relatório do travamento
+crashedpluginsMessage.submitButton.accesskey=m
 
 PluginVulnerableUpdatable=Este plugin é vulnerável e deve ser atualizado.
 PluginVulnerableNoUpdate=Este plugin tem vulnerabilidades de segurança.
