--- a/pt-BR/suite/chrome/common/feeds/subscribe.properties
+++ b/pt-BR/suite/chrome/common/feeds/subscribe.properties
@@ -2,6 +2,10 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+linkTitleTextFormat=Ir para %S
+addHandler=Adicionar "%S" (%S) como um leitor de RSS?
+addHandlerAddButton=Adicionar leitor de RSS
+handlerRegistered="%S" já está registrado como um leitor RSS
 subscribeNow=Inscrever-se agora
 chooseApplicationMenuItem=Escolher aplicativo…
 chooseApplicationDialogTitle=Escolher aplicativo
@@ -32,5 +36,6 @@ alwaysUseForVideoPodcasts=Sempre inscrever videocasts no %S.
 
 # Protocol Handling
 # "Add %appName (%appDomain) as an application for %protocolType links?"
+addProtocolHandler=Deseja adicionar o %S (%S) como um aplicativo para endereços “%S”?
 addProtocolHandlerAddButton=Adicionar aplicativo
 # "%appName has already been added as an application for %protocolType links."
