[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/feeds/subscribe.properties
+++ b/pt-BR/suite/chrome/common/feeds/subscribe.properties
@@ -31,8 +31,17 @@ alwaysUseForFeeds=Sempre inscrever RSS no %S.
 alwaysUseForAudioPodcasts=Sempre inscrever podcasts no %S.
 alwaysUseForVideoPodcasts=Sempre inscrever videocasts no %S.
 
+subscribeFeedUsing=Inscrever-se neste RSS usando
+subscribeAudioPodcastUsing=Inscrever-se neste podcast usando
+subscribeVideoPodcastUsing=Inscrever-se neste videocast usando
 
+feedSubscriptionFeed1=Este é um “RSS” que registra modificações ocorridas neste site.
+feedSubscriptionAudioPodcast1=Este é um “podcast” de conteúdo que é atualizado frequentemente neste site.
+feedSubscriptionVideoPodcast1=Este é um “videocast” de conteúdo que é atualizado frequentemente neste site.
 
+feedSubscriptionFeed2=Você pode inscrever este RSS em um leitor para monitorar as atualizações do conteúdo.
+feedSubscriptionAudioPodcast2=Você pode inscrever este podcast em um leitor para monitorar as atualizações do conteúdo.
+feedSubscriptionVideoPodcast2=Você pode inscrever este videocast em um leitor para monitorar as atualizações do conteúdo.
 
 # Protocol Handling
 # "Add %appName (%appDomain) as an application for %protocolType links?"
