--- a/pt-BR/suite/chrome/common/notification.properties
+++ b/pt-BR/suite/chrome/common/notification.properties
@@ -21,7 +21,14 @@ crashedpluginsMessage.reloadButton.label=Recarregar página
 crashedpluginsMessage.reloadButton.accesskey=R
 crashedpluginsMessage.submitButton.label=Enviar relatório do travamento
 crashedpluginsMessage.submitButton.accesskey=m
+crashedpluginsMessage.learnMore=Saiba mais…
 
+activatepluginsMessage.title=Você deseja ativar os plugins nesta página?
+activatepluginsMessage.activate.label=Ativar plugins
+activatepluginsMessage.activate.accesskey=A
+activatepluginsMessage.dismiss.label=Não ativar
+activatepluginsMessage.dismiss.accesskey=N
+activateSinglePlugin=Ativar
 PluginVulnerableUpdatable=Este plugin é vulnerável e deve ser atualizado.
 PluginVulnerableNoUpdate=Este plugin tem vulnerabilidades de segurança.
 vulnerableUpdatablePluginWarning=Versão desatualizada!
@@ -55,10 +62,19 @@ addonDownloadRestartButton=Reiniciar
 # #1 first add-on's name, #2 number of add-ons, #3 application name
 addonsInstalled=O #1 foi instalado.;#2 complementos foram instalados.
 addonsInstalledNeedsRestart=O #1 será instalado após o #3 ser reiniciado.;#2 complementos serão instalados após o #3 ser reiniciado.
+addonInstallRestartButton=Reiniciar agora
+addonInstallRestartButton.accesskey=R
+addonInstallManageButton=Abrir gerenciador de complementos
 
 # LOCALIZATION NOTE (addonError-1, addonError-2, addonError-3, addonError-4, addonErrorIncompatible, addonErrorBlocklisted):
 # #1 is the add-on name, #2 is the host name, #3 is the application name
 # #4 is the application version
+addonError-1=Este complemento não pôde ser recebido. Houve uma falha na conexão com #2.
+addonError-2=Este complemento recebido de #2 não pôde ser instalado. Ele não corresponde ao arquivo esperado pelo #3.
+addonError-3=Este complemento recebido de #2 não pôde ser instalado. Ele aparenta estar corrompido.
+addonError-4=O #1 não pôde ser instalado. O #3 não conseguiu modificar o arquivo que precisava.
+addonErrorBlocklisted=O #1 não pôde ser instalado. Há uma alta probabilidade dele causar problemas de segurança ou estabilidade.
+addonErrorIncompatible=O #1 não pôde ser instalado por não ser compatível com o #3 #4.
 
 # Light Weight Themes
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
@@ -93,13 +109,21 @@ offlineApps.never=Nunca para este site
 
 # Block autorefresh
 refreshBlocked.refreshLabel=O %S impediu esta página de recarregar automaticamente.
+refreshBlocked.redirectLabel=O %S impediu esta página de redirecionar automaticamente para outra página.
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
+lockPrompt.text=Histórico e favoritos não serão funcionais porque um dos arquivos do %S está sendo usado por outro aplicativo, talvez um programa de segurança.
+lockPromptInfoButton.label=Saiba mais
+lockPromptInfoButton.accesskey=S
 
 # LOCALIZATION NOTE (updatePrompt.text)
 # %S will be replaced with the application name.
+updatePromptCheckButton.label=Verificar atualizações
+updatePromptCheckButton.accesskey=V
 
+SecurityPreferences.label=Preferências
+SecurityPreferences.accesskey=P
 PostToInsecureContinue=Continuar
 
 # Phishing/Malware Notification Bar.
