--- a/pt-BR/suite/chrome/common/openLocation.properties
+++ b/pt-BR/suite/chrome/common/openLocation.properties
@@ -2,6 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+attachTitle=Anexar página da web
 # LOCALIZATION NOTE (attachEnterLabel): should contain "enter.accesskey"
 # as defined in openLocation.dtd
 attachButtonLabel=Anexar \u0020
