--- a/pt-BR/suite/chrome/common/places/places.properties
+++ b/pt-BR/suite/chrome/common/places/places.properties
@@ -12,6 +12,7 @@ noTitle=(sem título)
 
 
 
+searchBookmarks=Pesquisar nos Favoritos
 
 tabs.openWarningTitle=Confirmar abertura
 tabs.openWarningMultipleBranded=Você está prestes a abrir %S abas.  Isto pode deixar o %S lento enquanto as páginas carregam. Tem certeza de que deseja continuar?
@@ -24,3 +25,4 @@ saveSearch.inputLabel=Nome:
 
 
 OrganizerQueryHistory=Histórico
+OrganizerQueryTags=Rótulos
