[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/permissions/cookieViewer.properties
+++ b/pt-BR/suite/chrome/common/permissions/cookieViewer.properties
@@ -21,3 +21,4 @@ deleteAllCookiesSites=Tem certeza de que deseja excluir todos os sites de cookie
 deleteAllSitesTitle=Excluir sites
 deleteAllSitesYes=&Excluir
 deleteSelectedCookies=Tem certeza de que deseja excluir os cookies selecionados?
+deleteSelectedCookiesTitle=Remover Cookies selecionados
