--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -192,9 +192,9 @@ incoming_call_block_button=Zablokovať
 hangup_button_title=Zavesiť
 hangup_button_caption2=Ukončiť
 mute_local_audio_button_title=Stlmiť zvuk
-unmute_local_audio_button_title=Zrušiť stlmenie zvuku
-mute_local_video_button_title=Stlmiť video
-unmute_local_video_button_title=Zrušiť stlmenie videa
+unmute_local_audio_button_title=Zapnúť zvuk
+mute_local_video_button_title=Vypnúť video
+unmute_local_video_button_title=Zapnúť video
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
 ## when calling a contact. Don't translate the part between {{..}} because
