--- a/ja/dom/chrome/dom/dom.properties
+++ b/ja/dom/chrome/dom/dom.properties
@@ -214,3 +214,5 @@ KeyNameZoomWarning		=KeyboardEvent.key の値 "Zoom" は廃止され、"ZoomTogg
 KeyNameDeadKeysWarning		=KeyboardEvent.key の "Dead" で始まる値は廃止され、"Dead" に統合されます。詳しくは https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key を参照してください。
 ImportXULIntoContentWarning	=XUL ノードのコンテンツドキュメントへのインポートは非推奨です。この関数は間もなく削除されます。
 XMLDocumentLoadPrincipalMismatch	=他のウィンドウから開いたドキュメント上での document.load の使用は禁止されています。ウィンドウ内に作成されたドキュメントのみ、呼び出しが許可されます。代わりに XMLHttpRequest の使用が推奨されます。
+# LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation	=未完了の IndexedDB トランザクションがページ遷移により中止されました。
