--- a/ja/dom/chrome/security/security.properties
+++ b/ja/dom/chrome/security/security.properties
@@ -11,6 +11,8 @@ CrossSiteRequestBlocked			=クロスオリジンリクエストをブロック: 
 InvalidSTSHeaders			=サイトに無効な Strict-Transport-Security ヘッダが指定されています。
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InvalidPKPHeaders			=サイトに無効な Public-Key-Pins ヘッダが指定されています。
+# LOCALIZATION NOTE: Do not translate "SHA-1"
+SHA1Sig					=このサイトは SHA-1 証明書を利用しています。SHA-1 より強固なハッシュアルゴリズムを使用した証明書の利用をお勧めします。
 InsecurePasswordsPresentOnPage		=パスワードフィールドが安全でない (http://) ページ上にあり、ユーザのログイン情報の盗難を許すセキュリティ上の危険性があります。
 InsecureFormActionPasswordsPresent	=パスワードフィールドが安全でない (http://) フォームアクションを持つフォーム要素内にあり、ユーザのログイン情報の盗難を許すセキュリティ上の危険性があります。
 InsecurePasswordsPresentOnIframe	=パスワードフィールドが安全でない (http://) iframe 内にあり、ユーザのログイン情報の盗難を許すセキュリティ上の危険性があります。
