--- a/ja-JP-mac/dom/chrome/layout/css.properties
+++ b/ja-JP-mac/dom/chrome/layout/css.properties
@@ -113,6 +113,9 @@ PEColorSaturationEOF		= 彩度
 PEColorLightnessEOF		= 明度
 PEColorOpacityEOF		= 色の透明度
 PEExpectedNumber		= 数値であるべきところが '%1$S' になっています。
+PEPositionEOF			= <position>
+PEExpectedPosition		= <position> であるべきところが '%1$S' になっています。
+PEExpectedRadius		= radius であるべきところが '%1$S' になっています。
 PEExpectedCloseParen		= ')' であるべきところが '%1$S' になっています。
 PEDeclEndEOF			= スタイル宣言終わりの ';' または '}'\ 
 PEParseDeclarationNoColon	= ':' であるべきところが '%1$S' になっています。
