--- a/pt-BR/toolkit/chrome/global/aboutSupport.properties
+++ b/pt-BR/toolkit/chrome/global/aboutSupport.properties
@@ -84,3 +84,5 @@ minLibVersions = Versão mínima esperada
 loadedLibVersions = Versão em uso
 
 hasSeccompBPF = Seccomp-BPF (Sistema de filtragem de chamadas)
+canSandboxContent = Isolamento de processos de conteúdo
+canSandboxMedia = Isolamento de plugins de mídia
