[th] update from Pootle (mobile)

--- a/th/mobile/android/chrome/webapp.properties
+++ b/th/mobile/android/chrome/webapp.properties
@@ -43,6 +43,7 @@ installUpdateTitle=ดาวน์โหลดแล้ว #1 การปรั
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of updates.
 # example: 3 updates failed
+retrievalFailedTitle=อัพเดต #1 ล้มเหลว;อัพเดต #1 ล้มเหลว
 
 # LOCALIZATION NOTE (retrievalFailedMessage): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
