--- a/th/mobile/overrides/appstrings.properties
+++ b/th/mobile/overrides/appstrings.properties
@@ -5,6 +5,7 @@
 malformedURI=รูปแบบ URL ไม่ถูกต้อง และไม่สามารถโหลดได้
 fileNotFound=Firefox ไม่พบไฟล์ %S
 dnsNotFound=Firefox ไม่พบเซิร์ฟเวอร์ %S
+unknownProtocolFound=Firefox ไม่ทราบว่าจะเปิดที่อยู่นี้อย่างไร เพราะว่าหนึ่งในโพรโทคอลเหล่านี้ (%S) ไม่มีความสัมพันธ์กับโปรแกรมใดๆ หรือไม่ได้รับการอนุญาตสำหรับเนื้อหานี้
 connectionFailure=Firefox ไม่สามารถสร้างการเชื่อมต่อไปยังเซิร์ฟเวอร์ %S.
 netInterrupt=การเชื่อมต่อไปยัง %S ถูกตัดระหว่างการโหลดหน้าเว็บ
 netTimeout=เซิร์ฟเวอร์ %S ตอบสนองช้าเกินไป
