[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/notification.properties
+++ b/pt-BR/suite/chrome/common/notification.properties
@@ -28,7 +28,10 @@ activatepluginsMessage.activate.label=Ativar plugins
 activatepluginsMessage.activate.accesskey=A
 activatepluginsMessage.dismiss.label=Não ativar
 activatepluginsMessage.dismiss.accesskey=N
+activatepluginsMessage.never.label=Nunca ativar plugins para este site
+activatepluginsMessage.never.accesskey=N
 activateSinglePlugin=Ativar
+PluginClickToActivate=Ativar %S.
 PluginVulnerableUpdatable=Este plugin é vulnerável e deve ser atualizado.
 PluginVulnerableNoUpdate=Este plugin tem vulnerabilidades de segurança.
 vulnerableUpdatablePluginWarning=Versão desatualizada!
