--- a/pt-BR/suite/chrome/common/viewZoomOverlay.properties
+++ b/pt-BR/suite/chrome/common/viewZoomOverlay.properties
@@ -16,3 +16,5 @@ fullZoom.accesskey=Z
 # label pattern for remaining values, accesskeys are assigned dynamically
 zoom.value.label=%zoom% %
 
+zoom.other.label=Outro (%zoom% %)…
+zoom.other.accesskey=O
