--- a/sl/mobile/android/chrome/browser.properties
+++ b/sl/mobile/android/chrome/browser.properties
@@ -208,7 +208,7 @@ password.dontSave=Ne shrani
 browser.menu.showCharacterEncoding=false
 
 # Text Selection
-selectionHelper.textCopied=Besedilo, skopirano v odložišče
+selectionHelper.textCopied=Besedilo skopirano v odložišče
 
 # Casting
 # LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
